--- a/AsiaLabv1/Views/Shared/_MainLayout.cshtml
+++ b/AsiaLabv1/Views/Shared/_MainLayout.cshtml
@@ -25,6 +25,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="~/js/pagination.js"></script>-->
     <script src="../../js/pagination.min.js"></script>
     <script src="../../js/pagination.js"></script>
+
+    <script src="../../js/pdfmake.min.js"></script>
+    <script src="../../js/vfs_fonts.js"></script>
+    <script src="../../js/pdfGeneration.js"></script>
+
     <!-- Custom and plugin javascript -->
     <link href="~/css/custom.css" rel="stylesheet">
     <script src="~/js/custom.js"></script>
